crates/rome_service/src/snapshots/cant_read_directory.snap
---
source: crates/rome_service/src/diagnostics.rs
expression: content
---
example/ internalError/fs ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Biome couldn't read the following directory, maybe for permissions reasons or it doesn't exists: example/
  


