crates/rome_service/src/snapshots/source_file_not_supported.snap
---
source: crates/rome_service/src/diagnostics.rs
expression: content
---
not_supported.toml internalError/io ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Biome could not determine the language for the file extension toml
  


