crates/rome_service/src/snapshots/transport_serde_error.snap
---
source: crates/rome_service/src/diagnostics.rs
expression: content
---
internalError/io  INTERNAL  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × serialization error: Some serialization/deserialization error
  
  ! This diagnostic was derived from an internal Biome error. Potential bug, please report it if necessary.
  


